Updated home page component styles, added painting detail components

--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -8,7 +8,7 @@
     <div class="container">
       <app-section-title
         [title]="'Services'"
-        [subTitle]="'What i have to offer'"
+        [subTitle]="'What i do'"
         [text]="'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'"
       ></app-section-title>
       <div class="row">
