--- a/angular-web-app/src/app/components/service-card/service-card.component.html
+++ b/angular-web-app/src/app/components/service-card/service-card.component.html
@@ -1,5 +1,5 @@
 <!-- Card-->
-<mat-card class="py-4 mb-4">
+<mat-card class="py-4 mb-4 h-100">
   <mat-card-content>
     <div class="text-center">
       <i class="fas fa-4x {{service.icon}} txt-primary mb-4"></i>
