--- a/angular-web-app/src/app/components/_layout/header-small/header-small.component.scss
+++ b/angular-web-app/src/app/components/_layout/header-small/header-small.component.scss
@@ -3,8 +3,9 @@ header.small-head {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background:
-    linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),
-    url("../../../../assets/img/masthead.jpg") no-repeat scroll center;
+    //linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),
+    linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%),
+    url("https://scontent-ams4-1.xx.fbcdn.net/v/t1.0-9/115932795_1173222826364715_1101636021482293624_o.jpg?_nc_cat=110&_nc_sid=8bfeb9&_nc_ohc=5Je9T9TO_VYAX91ueZ4&_nc_ht=scontent-ams4-1.xx&oh=b533045c0da5d4518f1c0b98367b47a2&oe=5F3D83E3") no-repeat scroll center;
   background-size: cover;
 }
 
