--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -15,9 +15,9 @@
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" routerLink="/about" routerLinkActive="router-link-active">About</a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link nav-link-fade-up" routerLink="/about" routerLinkActive="router-link-active">About</a>-->
+<!--        </li>-->
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" routerLink="/contact" routerLinkActive="router-link-active">Contact</a>
         </li>
