--- a/angular-web-app/src/app/components/latest/latest.component.scss
+++ b/angular-web-app/src/app/components/latest/latest.component.scss
@@ -1,5 +1,49 @@
-@import "../../../variables.scss";
+@import "../../../variables";
 
+.latest-box {
+  position: relative;
+  display: block;
+  height: 60vh;
+  width: 100%;
+}
+
+.latest-box-img {
+  width: 100%;
+  height: 100%;
+  object-position: 50% 50%;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.latest-box-caption {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  color: #fff;
+  border-radius: 5px;
+  background-color: rgba($color-primary, 0.9);
+  transition: opacity 0.25s ease;
+  cursor: grab;
+}
+
+.latest-box:hover .latest-box-caption {
+  opacity: 1;
+}
+
+.latest-project-name {
+  font-size: 1.2rem;
+}
+
+.latest-project-category {
+  font-size: 1.2rem;
+}
 
 .leftRs {
   position: absolute;
@@ -43,5 +87,3 @@
   -webkit-transform: scale(1.7);
   transform: scale(1.7);
 }
-
-
