--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -2,7 +2,7 @@ $color-primary: #2196F3;
 $color-primary-light: #BBDEFB;
 $color-primary-dark: #1976D2;
 
-$color-accent: #607D8B;
+$color-accent: #FF4081;
 $color-warn: #F44336;
 
 $color-dark: #272727;
