Updated details page

--- a/angular-web-app/src/app/components/_layout/nav/nav.component.scss
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.scss
@@ -11,6 +11,11 @@
   color: $color-txt-black;
 }
 
+.navbar-brand-img {
+  height: 3rem;
+  width: auto;
+}
+
 .navbar-toggler {
   padding: 0 !important;
 }
