--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -1,7 +1,10 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-md fixed-top py-0" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" routerLink="/home">Spavento</a>
+    <a class="navbar-brand" routerLink="/home">
+      <img src="/assets/img/favicon/favicon-96x96.png" alt="logo" class="navbar-brand-img">
+      Spavento
+    </a>
     <button class="navbar-toggler navbar-toggler-right" type="button"
             data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,9 +18,6 @@
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
         </li>
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link nav-link-fade-up" routerLink="/about" routerLinkActive="router-link-active">About</a>-->
-<!--        </li>-->
         <li class="nav-item">
           <a class="nav-link nav-link-fade-up" routerLink="/contact" routerLinkActive="router-link-active">Contact</a>
         </li>
