--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -1,5 +1,5 @@
-
-<div>
+<!-- Painting -->
+<div *ngIf="painting">
   <!-- Header small -->
   <app-header-small [title]="painting.title"></app-header-small>
 
@@ -13,9 +13,56 @@
           [subTitle]="'Details of painting'"
           [text]="'By ' + painting.artist + '.'"
         ></app-section-title>
-        <div class="row">
 
+        <div class="row">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <app-carousel-img [paintingId]="painting.id"></app-carousel-img>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12">
+
+            <mat-card class="">
+              <mat-card-content>
+                <h2 class="title-underlined">Details</h2>
+
+                <mat-accordion>
+
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>Artist</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>{{painting.artist}}</p>
+                  </mat-expansion-panel>
+
+                  <mat-expansion-panel [expanded]="true">
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>Description</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>{{painting.description}}</p>
+                  </mat-expansion-panel>
+
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>Paint & Category</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>{{painting.paint}} - {{painting.category}}</p>
+                  </mat-expansion-panel>
+
+                  <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>Status & Price</mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>{{painting.status}} - &euro; {{painting.price}}</p>
+                  </mat-expansion-panel>
+
+
+                </mat-accordion>
+              </mat-card-content>
+
+            </mat-card>
+
+          </div>
         </div>
+
       </div>
     </section>
 
