--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -56,6 +56,10 @@ button::-moz-focus-inner {
   height: 100%;
 }
 
+.flex-spacer {
+  flex: 1 1 auto;
+}
+
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
