Fixed navbar behaviour

--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -1,5 +1,12 @@
-<!-- Wrapper for theme -->
-<div class="site-wrapper theme-light">
-    <!-- Router outlet -->
-    <router-outlet></router-outlet>
+
+<!-- NavBar -->
+<app-nav></app-nav>
+
+<!-- Site content -->
+<div id="site-content">
+  <!-- Router outlet -->
+  <router-outlet></router-outlet>
 </div>
+
+<!-- Footer -->
+<app-footer></app-footer>
