--- a/angular-web-app/src/app/components/_layout/nav/nav.component.scss
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.scss
@@ -144,6 +144,10 @@
 }
 
 @media (min-width: 768px) {
+  #navbarResponsive {
+    height: 100% !important;
+  }
+
   #mainNav {
     box-shadow: none;
     background-color: transparent;
