--- a/angular-web-app/src/app/components/_layout/nav/nav.component.html
+++ b/angular-web-app/src/app/components/_layout/nav/nav.component.html
@@ -13,13 +13,19 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto my-2 my-lg-0">
         <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" routerLink="/home" routerLinkActive="router-link-active">Home</a>
+          <a class="nav-link nav-link-fade-up"
+             data-toggle="collapse" data-target="#navbarResponsive"
+             routerLink="/home" routerLinkActive="router-link-active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
+          <a class="nav-link nav-link-fade-up"
+             data-toggle="collapse" data-target="#navbarResponsive"
+             routerLink="/portfolio" routerLinkActive="router-link-active">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-fade-up" routerLink="/contact" routerLinkActive="router-link-active">Contact</a>
+          <a class="nav-link nav-link-fade-up"
+             data-toggle="collapse" data-target="#navbarResponsive"
+             routerLink="/contact" routerLinkActive="router-link-active">Contact</a>
         </li>
       </ul>
     </div>
