--- a/angular-web-app/src/app/app.component.html
+++ b/angular-web-app/src/app/app.component.html
@@ -3,9 +3,9 @@
 <app-nav></app-nav>
 
 <!-- Site content -->
-<div id="site-content">
+<div id="site-content" [@routeAnimations]="prepareRoute(outlet)">
   <!-- Router outlet -->
-  <router-outlet></router-outlet>
+  <router-outlet #outlet="outlet"></router-outlet>
 </div>
 
 <!-- Footer -->
