--- a/angular-web-app/src/app/components/_layout/header-small/header-small.component.html
+++ b/angular-web-app/src/app/components/_layout/header-small/header-small.component.html
@@ -2,12 +2,10 @@
 <header class="small-head">
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-10 align-self-end">
+      <div class="col-lg-10 align-self-center">
         <h1 class="txt-light font-weight-bold">{{title}}</h1>
         <hr class="divider my-4"/>
-      </div>
-      <div class="col-lg-8 align-self-baseline">
-        <p *ngIf="subTitle" class="txt-light-muted mb-5">{{subTitle}}</p>
+        <p *ngIf="subTitle" class="txt-light-muted">{{subTitle}}</p>
       </div>
     </div>
   </div>
