--- a/angular-web-app/src/app/components/_layout/header-small/header-small.component.scss
+++ b/angular-web-app/src/app/components/_layout/header-small/header-small.component.scss
@@ -1,7 +1,5 @@
 header.small-head {
   height: 50vh;
-  padding-top: 10rem;
-  padding-bottom: calc(10rem - 4.5rem);
   background:
     //linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),
     linear-gradient(to bottom, rgba(black, 0.9) 0%, rgba(black, 0.5) 100%),
@@ -10,24 +8,13 @@ header.small-head {
 }
 
 header.small-head h1 {
-  font-size: 2.25rem;
+  font-family: 'Dancing Script', cursive;
+  font-size: 4rem;
 }
 
-@media (min-width: 992px) {
-  header.small-head {
-    padding-top: 4.5rem;
-    padding-bottom: 0;
-  }
-  header.small-head p {
-    font-size: 1.15rem;
-  }
+@media (min-width: 768px) {
   header.small-head h1 {
-    font-size: 3rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  header.small-head h1 {
-    font-size: 3.5rem;
+    font-size: 6rem;
+    font-family: 'Dancing Script', cursive;
   }
 }
