--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <app-header></app-header>
 
-<main class="main main-raised">
+<main id="home" class="main main-raised">
 
   <!-- Services -->
   <section class="page-section bg-light">
