--- a/angular-web-app/src/app/components/_pages/about/about.component.html
+++ b/angular-web-app/src/app/components/_pages/about/about.component.html
@@ -2,7 +2,7 @@
 <app-header-small [title]="title" [subTitle]="subTitle"></app-header-small>
 
 <!-- Main -->
-<main class="main main-raised">
+<main id="about" class="main main-raised">
 
   <!-- Content -->
   <section class="page-section bg-light">
