--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -3,11 +3,9 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-center">
-        <p class="txt-light-muted">{{subTitle}}</p>
-        <h1 class="txt-light font-weight-bold pb-3">{{title}}</h1>
-        <button mat-mini-fab color="primary" aria-label="more">
-          <mat-icon>expand_more</mat-icon>
-        </button>
+        <p *ngIf="subTitle" class="txt-light-muted">{{subTitle}}</p>
+        <h1 class="txt-light font-weight-bold pb-3">{{titleDisplay}}</h1>
+        <hr class="divider">
       </div>
     </div>
   </div>
