--- a/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
+++ b/angular-web-app/src/app/components/call-to-action/call-to-action.component.html
@@ -1,6 +1,6 @@
 <!-- Call to action -->
 <div class="text-center">
   <p class="subtitle txt-accent text-uppercase">Some very cool one liner</p>
-  <h2 class="mb-5">Check out all my cool stuff</h2>
+  <h2 class="mb-5">{{typewriterDisplay}}</h2>
   <button mat-raised-button color="accent">Take me there!</button>
 </div>
