--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-center">
-        <h1 class="txt-light font-weight-bold">{{titleDisplay}}</h1>
+        <h1 class="txt-light font-weight-bold">{{titleDisplay}}<span class="txt-primary">.</span></h1>
         <hr class="divider my-4">
         <p *ngIf="subTitle" class="txt-light-muted">{{subTitle}}</p>
       </div>
