--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<app-header></app-header>
+<app-header [title]="title" [subTitle]="subTitle" [small]="false"></app-header>
 
 <main id="home" class="main main-raised">
 
