--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -1,7 +1,7 @@
 <!-- Painting -->
 <div *ngIf="painting">
   <!-- Header small -->
-  <app-header-small [title]="painting.title"></app-header-small>
+  <app-header [title]="title" [subTitle]="painting.title" [small]="true"></app-header>
 
   <!-- Main -->
   <main class="main main-raised">
