--- a/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
+++ b/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
 <!-- Header small -->
-<app-header-small [title]="title" [subTitle]="subTitle"></app-header-small>
+<app-header [title]="title" [subTitle]="subTitle" [small]="true"></app-header>
 
 <!-- Main -->
 <main id="portfolio" class="main main-raised">
