--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -16,3 +16,6 @@ $color-txt-black-muted: rgba(#000, 0.54);
 $color-txt-white: #fff;
 $color-txt-white-muted: rgba(#fff, 0.7);
 
+$masthead-height: 100vh;
+$smallhead-height: 60vh;
+
