--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Header-->
-<header class="masthead">
+<header [ngClass]="small ? 'smallhead' : 'masthead'">
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
       <div class="col-lg-10 align-self-center">
