Updated featured component

--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -18,9 +18,9 @@
           <p class="pb-3">Follow me on social media to stay updated.</p>
           <ul class="list-inline">
             <!-- facebook, twitter, instagram -->
-            <li class="list-inline-item"><a><i class="fab fa-facebook-f fa-lg mr-5"></i></a></li>
-            <li class="list-inline-item"><a><i class="fab fa-twitter fa-lg mr-5"></i></a></li>
-            <li class="list-inline-item"><a><i class="fab fa-instagram fa-lg mr-5"></i></a></li>
+            <li class="list-inline-item"><a><i class="fab fa-facebook-f fa-lg mr-5 icon-facebook"></i></a></li>
+            <li class="list-inline-item"><a><i class="fab fa-twitter fa-lg mr-5 icon-twitter"></i></a></li>
+            <li class="list-inline-item"><a><i class="fab fa-instagram fa-lg mr-5 icon-instagram"></i></a></li>
           </ul>
         </div>
 
