--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -27,11 +27,9 @@
         [title]="'Featured'"
         [subTitle]="'My personal favorite'"
       ></app-section-title>
-      <div class="row">
-        <div class="col-12">
-          <app-featured [painting]="featuredPainting"></app-featured>
-        </div>
-      </div>
+    </div>
+    <div class="container">
+      <app-featured [painting]="featuredPainting"></app-featured>
     </div>
   </section>
 
