--- a/angular-web-app/src/app/components/service-card/service-card.component.html
+++ b/angular-web-app/src/app/components/service-card/service-card.component.html
@@ -1,10 +1,10 @@
 <!-- Card-->
-<mat-card class="py-4 mb-4 h-100">
+<mat-card class="py-4 mb-4 gradient-orange txt-light">
   <mat-card-content>
     <div class="text-center">
-      <i class="fas fa-4x {{service.icon}} txt-primary mb-4"></i>
+      <mat-icon class="icon-big mb-2">{{service.icon}}</mat-icon>
       <h3 class="h4 mb-2">{{service.title}}</h3>
-      <p class="text-muted mb-0">{{service.description}}</p>
+      <p class="txt-light-muted mb-0">{{service.description}}</p>
     </div>
   </mat-card-content>
 </mat-card>
