--- a/angular-web-app/src/variables.scss
+++ b/angular-web-app/src/variables.scss
@@ -16,6 +16,16 @@ $color-txt-black-muted: rgba(#000, 0.54);
 $color-txt-white: #fff;
 $color-txt-white-muted: rgba(#fff, 0.7);
 
+$color-facebook: #3b5998;
+$color-instagram: #f09433;
+$color-twitter: #55acee;
+$color-cyan: #00bcd4;
+$color-gradient-blue: linear-gradient(60deg,#26c6da,#0097a7);
+$color-gradient-green: linear-gradient(60deg,#66bb6a,#388e3c);
+$color-gradient-orange: linear-gradient(60deg,#ffa726,#f57c00);
+$color-gradient-red: linear-gradient(60deg,#ef5350,#d32f2f);
+$color-gradient-purple: linear-gradient(60deg,#ab47bc,#7b1fa2);
+
 $masthead-height: 100vh;
 $smallhead-height: 60vh;
 
