--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -1,43 +1,17 @@
-<!-- Card-->
-<mat-card class="mt-3 p-0 mat-elevation-z4" id="featured-painting">
-  <mat-card-content>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-8 col-md-6 col-sm-12 px-0 mat-elevation-z6">
-          <div class="vh-60">
-            <img src="{{painting.thumbnail}}" class="img-fluid featured-img" alt="{{painting.title}}">
-          </div>
+<div class="row">
 
-        </div>
+  <div class="col-12">
+    <mat-card id="featured-card" class="p-0 mx-4 mat-elevation-z2">
+      <img src="{{painting.thumbnail}}" class="featured-img mat-elevation-z8" alt="{{painting.title}}">
+      <mat-card-content class="p-4 text-center">
+        <h2 class="">{{painting.title}}</h2>
+        <h6 class="font-italic mb-3 txt-primary">By Rolien Schrik.</h6>
+        <p class="pt-2">{{getTrimmedDescription()}}</p>
+        <button mat-flat-button class="gradient-blue txt-light round-button mx-1">{{painting.paint}}</button>
+        <button mat-flat-button class="gradient-orange txt-light round-button mx-1">{{painting.category}}</button>
+<!--        <button mat-raised-button color="primary" (click)="goToPaintingDetails()">Details</button>-->
+      </mat-card-content>
+    </mat-card>
+  </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-12 d-flex align-items-center">
-          <div class="py-3">
-            <h2 class="title-underlined">{{painting.title}}</h2>
-            <h6 class="text-icon font-italic mb-3 txt-dark-muted">
-              <mat-icon class="mr-2">brush</mat-icon>
-              <span>By Rolien Schrik.</span>
-            </h6>
-
-            <div class="badge badge-pill bg-accent txt-light mr-2">
-              <div class="text-icon">
-                <mat-icon class="icon-size-16">palette</mat-icon>
-                <span class="mx-2 font-size-16">{{painting.paint}}</span>
-              </div>
-            </div>
-            <div class="badge badge-pill bg-accent txt-light mr-2">
-              <div class="text-icon">
-                <mat-icon class="icon-size-16">category</mat-icon>
-                <span class="mx-2 font-size-16">{{painting.category}}</span>
-              </div>
-            </div>
-
-
-            <p class="pt-2">{{getTrimmedDescription()}}</p>
-
-            <button mat-flat-button color="primary" (click)="goToPaintingDetails()">Details</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </mat-card-content>
-</mat-card>
+</div>
