--- a/angular-web-app/src/app/components/section-title/section-title.component.html
+++ b/angular-web-app/src/app/components/section-title/section-title.component.html
@@ -5,7 +5,7 @@
     <h2>{{title}}</h2>
     <p *ngIf="text" class="txt-dark-muted">{{text}}</p>
   </div>
-  <div *ngIf="link" class="d-lg-flex align-items-center justify-content-end col-md-4">
+  <div *ngIf="link" class="col-md-4 d-lg-flex align-items-center justify-content-end">
     <a href="{{link}}" class="text-muted text-sm">
       Show more
       <i class="fas fa-angle-double-right ml-2"></i>
