--- a/angular-web-app/src/app/components/_pages/about/about.component.html
+++ b/angular-web-app/src/app/components/_pages/about/about.component.html
@@ -1,3 +1,6 @@
+<!-- NavBar -->
+<app-nav></app-nav>
+
 <!-- Header small -->
 <app-header [title]="title" [subTitle]="subTitle" [small]="true"></app-header>
 
@@ -20,3 +23,5 @@
 
 </main>
 
+<!-- Footer -->
+<app-footer></app-footer>
