--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -1,6 +1,7 @@
 <mat-card class="">
   <mat-card-content>
-
+    <h2 class="title-underlined">Images</h2>
+    
     <!-- Image -->
     <div class="selected-image-wrapper p-2">
       <img class="selected-image mat-elevation-z4" src="{{selectedImage}}" alt="painting">
@@ -13,10 +14,10 @@
           <img class="carousel-image mat-elevation-z4" src="{{image}}" alt="thumbnail"/>
         </a>
       </div>
-      <button mat-fab NguCarouselNext color="" class="rightRs mat-elevation-z0">
+      <button mat-fab NguCarouselNext color="" class="rightRs mat-elevation-z0" [style.opacity]="imageCarousel.isLast ? 0.5:1">
         <mat-icon>keyboard_arrow_right</mat-icon>
       </button>
-      <button mat-fab NguCarouselPrev color="" class="leftRs mat-elevation-z0">
+      <button mat-fab NguCarouselPrev color="" class="leftRs mat-elevation-z0" [style.opacity]="imageCarousel.isFirst ? 0.5:1">
         <mat-icon>keyboard_arrow_left</mat-icon>
       </button>
     </ngu-carousel>
