--- a/angular-web-app/src/app/components/_layout/header/header.component.html
+++ b/angular-web-app/src/app/components/_layout/header/header.component.html
@@ -2,11 +2,17 @@
 <header [ngClass]="small ? 'smallhead' : 'masthead'">
   <div class="container h-100">
     <div class="row h-100 align-items-center justify-content-center text-center">
-      <div class="col-lg-10 align-self-center">
-        <h1 class="txt-light font-weight-bold">{{titleDisplay}}<span class="txt-primary">.</span></h1>
-        <hr class="divider my-4">
-        <p *ngIf="subTitle" class="txt-light-muted">{{subTitle}}</p>
+      <div class="col-12 align-self-center">
+        <h1 class="txt-light font-weight-bold">
+          {{ titleDisplay }}<span class="txt-primary">.</span>
+        </h1>
+        <hr class="divider my-4" />
+        <p *ngIf="subTitle" class="txt-light-muted">{{ subTitle }}</p>
       </div>
     </div>
+  </div>
+  <!-- scrolldown -->
+  <div class="scrolldown w-100" *ngIf="!small">
+    <a href="#scrollto"><span></span></a>
   </div>
 </header>
