--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -1,3 +1,6 @@
+<!-- NavBar -->
+<app-nav></app-nav>
+
 <!-- Header small -->
 <app-header [title]="title" [subTitle]="subTitle" [small]="true"></app-header>
 
@@ -41,3 +44,6 @@
   </section>
 
 </main>
+
+<!-- Footer -->
+<app-footer></app-footer>
