--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -1,3 +1,6 @@
+<!-- NavBar -->
+<app-nav></app-nav>
+
 <!-- Header -->
 <app-header [title]="title" [subTitle]="subTitle" [small]="false"></app-header>
 
@@ -58,8 +61,7 @@
     </div>
   </section>
 
-
 </main>
 
-
-
+<!-- Footer -->
+<app-footer></app-footer>
