--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -1,3 +1,6 @@
+<!-- NavBar -->
+<app-nav></app-nav>
+
 <!-- Painting -->
 <div *ngIf="painting">
   <!-- Header small -->
@@ -15,11 +18,10 @@
         ></app-section-title>
 
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="col-lg-7 col-md-7 col-sm-12">
             <app-carousel-img [paintingId]="painting.id"></app-carousel-img>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12">
-
+          <div class="col-lg-5 col-md-5 col-sm-12">
             <mat-card class="">
               <mat-card-content>
                 <h2 class="title-underlined">Details</h2>
@@ -69,3 +71,5 @@
   </main>
 </div>
 
+<!-- Footer -->
+<app-footer></app-footer>
