--- a/angular-web-app/src/app/components/latest/latest.component.html
+++ b/angular-web-app/src/app/components/latest/latest.component.html
@@ -1,32 +1,44 @@
-<ngu-carousel #latestCarousel [inputs]="carouselConfig" [dataSource]="paintings">
-
-  <div *nguCarouselDef="let painting;" class="item p-3">
+<ngu-carousel
+  #latestCarousel
+  [inputs]="carouselConfig"
+  [dataSource]="paintings"
+>
+  <div *nguCarouselDef="let painting" class="item p-3">
     <a class="latest-box" (click)="goToPaintingDetails(painting.id)">
-      <img class="latest-box-img mat-elevation-z4" src="{{painting.thumbnail}}" alt=""/>
+      <img
+        class="latest-box-img mat-elevation-z4"
+        src="{{painting.thumbnail}}"
+        alt=""
+      />
       <div class="latest-box-caption p-3">
         <div class="latest-project-name">
-          <h2 class="my-0">{{painting.title}}</h2>
-          <hr class="divider mt-2"/>
+          <h2 class="my-0">{{ painting.title }}</h2>
+          <hr class="divider mt-2" />
         </div>
         <div class="latest-project-category">
-          <span class="badge badge-pill bg-accent mr-2">{{painting.paint}}</span>
-          <span class="badge badge-pill bg-accent">{{painting.category}}</span>
+          <span class="badge badge-pill bg-accent mr-2">{{
+            painting.paint
+          }}</span>
+          <span class="badge badge-pill bg-accent">{{
+            painting.category
+          }}</span>
         </div>
       </div>
     </a>
   </div>
 
-  <button mat-fab NguCarouselNext color="" class="rightRs mat-elevation-z0">
+  <button mat-fab NguCarouselNext color="" class="rightRs mat-elevation-z0" [style.opacity]="latestCarousel.isLast ? 0.5:1">
     <mat-icon>keyboard_arrow_right</mat-icon>
   </button>
-  <button mat-fab NguCarouselPrev color="" class="leftRs mat-elevation-z0">
+  <button mat-fab NguCarouselPrev color="" class="leftRs mat-elevation-z0" [style.opacity]="latestCarousel.isFirst ? 0.5:1">
     <mat-icon>keyboard_arrow_left</mat-icon>
   </button>
 
   <ul class="ngu-points" NguCarouselPoint>
-    <li *ngFor="let j of latestCarousel.pointNumbers; let i = index"
-        [class.active]="j == latestCarousel.activePoint"
-        (click)="latestCarousel.moveTo(i)">
-    </li>
+    <li
+      *ngFor="let j of latestCarousel.pointNumbers; let i = index"
+      [class.active]="j == latestCarousel.activePoint"
+      (click)="latestCarousel.moveTo(j)"
+    ></li>
   </ul>
 </ngu-carousel>
